Added serialization for pdf and convertion to dataframe

--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 fastapi = {extras = ["all"], version = "*"}
-strawberry-graphql = {extras = ["fastapi"], version = "*"}
+strawberry-graphql = {extras = ["cli"], version = "*"}
 uvicorn = "*"
 python-decouple = "*"
 pymongo = "*"
@@ -13,6 +13,9 @@ pyjwt = "*"
 passlib = "*"
 pre-commit = "*"
 pytest = "*"
+tabula-py = "*"
+openpyxl = "*"
+pypdf2 = "*"
 
 [dev-packages]
 
