--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,14 @@
 repos:
-  # - repo: local
-  #   hooks:
-  #     - id: pytest-check
-  #       name: pytest-check
-  #       stages: [commit]
-  #       types: [python]
-  #       entry: pytest
-  #       language: system
-  #       pass_filenames: false
-  #       always_run: true
+  - repo: local
+    hooks:
+      - id: pytest-check
+        name: pytest-check
+        stages: [commit]
+        types: [python]
+        entry: pytest
+        language: system
+        pass_filenames: false
+        always_run: true
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
@@ -22,7 +22,7 @@ repos:
       - id: check-executables-have-shebangs
       # - id: check-json
       # - id: pretty-format-json
-      # - id: check-merge-conflict
+      - id: check-merge-conflict
       # - id: check-xml
       # - id: check-yaml
       #   args: [--allow-multiple-documents]
@@ -37,22 +37,18 @@ repos:
     rev: 6.0.0  # pick a git hash / tag to point to
     hooks:
       - id: flake8
-        args: [--max-line-length=120]
+        args: [--max-line-length=80]
         # additional_dependencies: [flake8-docstrings]
   - repo: https://github.com/psf/black
     rev: 23.3.0
     hooks:
       - id: black
-        # It is recommended to specify the latest version of Python
-        # supported by your project here, or alternatively use
-        # pre-commit's default_language_version, see
-        # https://pre-commit.com/#top_level-default_language_version
-        language_version: python3.10
-  - repo: https://github.com/miki725/importanize/
-    rev: '0.8.0-alpha2'
-    hooks:
-      - id: importanize
-        args: [--length=80]
+        args: [--line-length=80]
+  # - repo: https://github.com/miki725/importanize/
+  #   rev: '0.8.0-alpha2'
+  #   hooks:
+  #     - id: importanize
+  #       args: [--length=80, --verbose]
 
 
-exclude: '^venv/'
+# exclude: '^venv/'
