Add mypy precommit hook this will help catch type checking errors

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,5 +50,12 @@ repos:
       - id: importanize
         args: [--length=80, --verbose, --print]
 
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: ''  # Use the sha / tag you want to point at
+    hooks:
+      - id: mypy
+        args: [--strict, --ignore-missing-imports]
+        additional_dependencies: [tokenize-rt==3.2.0]
+
 
 # exclude: '^venv/'
