--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_DATABASE=bv-auth-db
+MONGO_URI=mongodb+srv://alphatesfa789:XGgxIySS173TeO7v@cluster0.b5uslwx.mongodb.net/?retryWrites=true&w=majority
 
 SECRET_KEY = "your-secret-key"
 ALGORITHM = "HS256"
